--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
 		"libft.h": "c",
 		"fcntl.h": "c",
 		"__tree": "c",
-		"map": "c"
+		"map": "c",
+		"player.h": "c",
+		"game_state.h": "c"
 	}
 }
